--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "sweetalert2": "^11.1.5",
     "web-vitals": "^1.1.2"
   },
@@ -31,10 +32,10 @@
     ]
   },
   "browserslist": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-],
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint-config-prettier": "^8.3.0",
