--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-router": "^5.2.1",
