--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
