--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "boxicons": "^2.0.9",
     "emailjs-com": "^3.2.0",
-    "bootstrap": "^5.1.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.1",
     "react-paginate": "^7.1.3",
     "react-router": "^5.2.1",
