--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "boxicons": "^2.0.9",
+    "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
