--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.1",
     "react-paginate": "^7.1.3",
     "react-router": "^5.2.1",
